# project_opengl

./: .gitignore  CMakeLists.txt  main.cpp
external_lib/: circle.h  shader.h  skybox.h  skybox_shader.h
extra_tools/: 3d_object.h  Window.h  camera.h
include/glad/: glad.c
shaders/: basic_lighting.vs  light_object.fs
